# DbgToolkit

./: .gitattributes  .gitignore  CMakeLists.txt  DbgToolkitBuildTreeSettings.cmake.in  DbgToolkitConfig.cmake.in  DbgToolkitConfigVersion.cmake.in  FloggingBuildTreeSettings.cmake.in  FloggingConfig.cmake.in  FloggingConfigVersion.cmake.in
cat_server/: BUILD.txt  CMakeLists.txt  Jamfile  connection.cpp  connection.h  main.cpp  server.h  tls.h
sample_integrations/asio_file_client/: CMakeLists.txt  config.h  main.cpp
sample_integrations/file_file_client/: CMakeLists.txt  config.h  levels.h  main.cpp
sample_integrations/profile_client/: CMakeLists.txt  profile_client.cpp  wh_trace.h
sample_integrations/simple_client/: CMakeLists.txt  asn1_debug.cpp  bar.h  contexts.inc  default_contexts.h  default_contexts.inc  default_levels.h  default_levels.inc  foo.h  main.cpp  thrpool.h
sample_integrations/trace_client_wh/: CMakeLists.txt  build.sh  main.cpp  sample_contexts.h  trace_wh.cpp  wh_config.h  wh_contexts.h  wh_trace.h
tests/dll_project_simulator/: CMakeLists.txt  macros.h  main.cpp  user_config.h  user_contexts.h  user_levels.h
tests/test_profiler/: CMakeLists.txt  bar.cpp  bar.h  blockinfo.h  build.sh  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mygraphicsview.cpp  mygraphicsview.h  profiler.pro  resources.qrc  server.h  view.cpp  view.h
tests/variadic/: CMakeLists.txt  variadic.cpp
trace_client_wh/: CMakeLists.txt  trace_client_wh.sln  trace_client_wh.vcxproj  trace_wh.cpp  wh_contexts.h  wh_levels.h  wh_trace.h
trace_server/: CMakeLists.txt  FindDirectX.cmake  FindPlugins.cmake  FindReleaseAndDebug.cmake  TMP_filters.cpp  _garbage_.cpp  action.h  app.rc  appdata.h  arrow.cpp  arrow.h  asn1_debug.cpp  basegantt.cpp  basegantt.h  baselog.cpp  baselog.h  baseplot.cpp  baseplot.h  basetable.cpp  basetable.h  basetablemodel.cpp  basetablemodel.h  buttoncache.h  cmd.h  colorizeconfig.cpp  colorizeconfig.h  colorizer_regex.cpp  colorizer_regex.h  colorizer_regex.ui  colorizer_row.cpp  colorizer_row.h  colorizer_row.ui  colorizer_string.cpp  colorizer_string.h  colorizer_string.ui  colorizermgr.cpp  colorizermgr.h  colorizewidget.cpp  colorizewidget.h  colorizewidget.ui  (+257 more)
trace_server/3rd/: CMakeLists.txt
trace_server/dock/: dock.h  dockdelegates.h  dockedconfig.h  dockedwidgets.h  dockmanager.cpp  dockmanager.h  dockmanagerconfig.cpp  dockmanagerconfig.h  dockmanagermodel.cpp  dockmanagermodel.h  dockmanagerview.cpp  dockmanagerview.h  dockwidget.cpp
trace_server/filters/: filterbase.h  filtermgrbase.cpp  filtermgrbase.h
trace_server/gantt/: frameview.cpp  frameview.h  frameviewconfig.cpp  frameviewconfig.h  frameviewctxmenu.h  ganttconfig.cpp  ganttconfig.h  ganttctxmenu.h  ganttdata.h  ganttitem.cpp  ganttitem.h  ganttview.cpp  ganttview.h  ganttwidget.cpp  ganttwidget.h  histogram.cpp  histogram.h  scalewidget.h  scrollzoomer.cpp  scrollzoomer.h
trace_server/kde/: kbihash_p.h  kdebug.h  kdeui_export.h  klinkitemselectionmodel.cpp  kmodelindexproxymapper.cpp  kmodelindexproxymapper.h  kselectionproxymodel.cpp  kselectionproxymodel.h
trace_server/logs/: filterproxy.cpp  filterproxy.h  filterproxymodel.cpp  filterproxymodel.h  findproxymodel.cpp  findproxymodel.h  logconfig.cpp  logconfig.h  logctxmenu.cpp  logctxmenu.h  logdelegate.cpp  logdelegate.h  logselectionproxymodel.h  logtablemodel.cpp  logtablemodel.h  logtableview.cpp  logtableview.h  logwidget.cpp  logwidget.h  logwidget_actions.cpp  logwidget_colorize.cpp  logwidget_filtering.cpp  logwidget_find.cpp  logwidget_legacycfg.cpp  logwidget_tools.cpp  logwidget_view.cpp  tagconfig.h
trace_server/models/: baseproxymodel.cpp  baseproxymodel.h  basetablemodel.cpp  basetablemodel.h  filterproxymodel.cpp  filterproxymodel.h  movablelistmodel.h  sparseproxymodel.cpp  sparseproxymodel.h  treemodel.h  treeproxy.cpp  treeproxy.h
trace_server/obsolette/: dockdelegate.cpp  dockmanager.cpp  dockmanager.cpp.2  dockmanager.h  dockmanager.h.2  mainwindow_obsolette.cpp  statswindow.cpp  statswindow.h
trace_server/plot/: curves.h  plotconfig.cpp  plotconfig.h  plotctxmenu.h  plottypes.cpp  plottypes.h  plotwidget.cpp  plotwidget.h
trace_server/profiler/: bar.cpp  bar.h  connection.cpp  connection.h  main.cpp  mygraphicsview.h  profilerbar.h  profilerconnection.cpp  profilerconnection.h  profilergraphicsview.h  profilermainwindow.cpp  profilermainwindow.h  profilermainwindow.ui  profilerserver.h  profilerwindow.cpp  profilerwindow.h  view.cpp  view.h
trace_server/qtsln/: CMakeLists.txt  flowlayout.h
trace_server/qwt/: CmakeLists.txt  qwt_clipper.cpp  qwt_matrix_raster_data.cpp  qwt_plot_curve.cpp  qwt_plot_directpainter.cpp  qwt_plot_histogram.cpp  qwt_plot_intervalcurve.cpp  qwt_plot_renderer.cpp  qwt_plot_spectrocurve.cpp  qwt_plot_svgitem.cpp  qwt_series_data.cpp
trace_server/resources/: resources.qrc
trace_server/serialize/: ser_array.h  ser_qbytearray.h  ser_qcolor.h  ser_qlist.h  ser_qregexp.h  ser_qstring.h  ser_qstringlist.h  ser_qt.h  ser_qvector.h  serialize.h
trace_server/server/: server.cpp  server.h
trace_server/table/: baseproxymodel.cpp  baseproxymodel.h  editableheaderview.cpp  sparseproxy.cpp  sparseproxymodel.cpp  sparseproxymodel.h  tableconfig.cpp  tableconfig.h  tablectxmenu.h  tablemodel.cpp  tablemodel.h  tablemodelview.cpp  tablemodelview.h  tablewidget.cpp  tablewidget.h  tablewidget_filtering.cpp
trace_server/utils/: delegates.cpp  delegates.h  find_utils_table.h  hsv.h  utils.h  utils_boost.h  utils_file_filters.h  utils_history.h  utils_openfilelinewith.h  utils_qsettings.h  utils_qstandarditem.h  utils_widgets.h
trace_server/widgets/: buttoncache.cpp  buttoncache.h  checkedcomboboxconfig.h  colorizeconfig.cpp  colorizeconfig.h  colorizewidget.cpp  colorizewidget.h  colorizewidget.ui  combolist.cpp  findconfig.cpp  findconfig.h  findwidget.cpp  findwidget.h  findwidget.ui  help.ui  (+27 more)
trace_server_launcher/: CMakeLists.txt  launcher.cpp  launcher.h  main.cpp  start_client.cpp  test_server.h
trace_version/: CMakeLists.txt  trace_version.h
(+328 files in other folders)
